unpackaged/objects/CaseAccountRole__c.object
<CustomObject>
  <description>Custom object used to link the case to multiple accounts with different roles. The standard Case Contact Role object is a legacy and has many limitation</description>
  <fields>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Cases</relationshipLabel>
    <relationshipName>CaseAccount</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
  </fields>
  <fields>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Related Accounts</relationshipLabel>
    <relationshipName>CaseAccountRoles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
  </fields>
  <fields>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Contact.AccountId</field>
        <operation>equals</operation>
        <valueField>$Source.Account__c</valueField>
      </filterItems>
      <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Cases</relationshipLabel>
    <relationshipName>CaseContactRolesCustom</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Email__c</fullName>
    <description>Show Email from contact if populated, otherwise to show it from Account</description>
    <formula>If(  Contact__c  ='', Account__r.General_Info_Email__c, Contact__r.Email  )</formula>
    <label>Email</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>MainContactPoint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The primary account/contact for all communications around this case</description>
    <inlineHelpText>The primary account/contact for all communications around this case</inlineHelpText>
    <label>Main Contact Point</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Phone__c</fullName>
    <description>Show the phone number from Contact if populated, otherwise from Account Phone</description>
    <formula>If(  Contact__c  ='', Account__r.Phone , Contact__r.Phone )</formula>
    <label>Phone</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Role__c</fullName>
    <description>Account/Contact role for this Case</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Dealer</fullName>
        </value>
        <value>
          <fullName>Dentist</fullName>
        </value>
        <value>
          <fullName>Lab</fullName>
        </value>
        <value>
          <fullName>Non-SFDC Internal Team</fullName>
        </value>
        <value>
          <fullName>Payer</fullName>
        </value>
        <value>
          <fullName>Third Party Contractor</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Case Account Role</label>
  <nameField>
    <displayFormat>CAR{000000000}</displayFormat>
    <label>Case Account Role Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Case Account Roles</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>